# document-rag-chatbot

./: Help.txt  README.md  ingest.py  main.py  pyproject.toml  rag_pipeline.py  test_queries.py
ML Training/: Ford_Car.py  House.py  Insurance.py  Salary.py  ikr.pkl  model.pkl  pyproject.toml  salary_model.pkl  student.py  student_model.pkl
