[project]
name = "rag-support-chatbot"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.5.5",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
    "unstructured[md]>=0.21.5",
]
